version 0.9.1 - currently working on
- [TASK] Adapting copyright lines to current reality
- [BUGFIX] Location not shown in list view (Thanks Thomas Gemperle)

version 0.9.0 - released 2012-05-21
- [#3760] Documentation: Fixed the realURL example
- [#3269] Fix: Restored the back link in the detail view
- [#3040] Fix: Date in Company and Birthdate now shown localized in the detail view
- [#4099] Fix: Using the template from Flexform now works
- [#4303] Fix: Call to undefined method t3lib_div::makeInstanceClassName in detail view
- [#3038] Fix: doNotLinkNamesToDetailView is ignored in list view
- [#3037] Fix: doNotLinkToDetailPage caused wrong output in list view
- [#3376] Change: If email addresses are JS encrypted, just a label is shown instead of the plain text address. (Thanks Rik for the patch!)
- [#3024] Change: Now allowing bigger portrait images and file attachments
- [#3036] Fix: Missing label in location records
- [#3029] Feature: Added functions as database relations to persons (instead of text field)
- [#3025] Feature: Added vCard download to the detail view
- [#3023] Fix: Detail view shows dummy image even for person with image
- [#3033] Fix: Team leaders get invalid CSS classes
- [#2989] Fixed some dependency issues to oelib (increased version requirement)

version 0.8.0 - released 2009-05-16 at T3DD09
If you upgrade an existing installation, read the upgrade notes in the documentation!!!
- [#2972] Fix: CSS file is now correctly loaded via TypoScript
- [#2547] Feature: Provide an update script
- [#2718] Feature: Required fields now can be configured in extension config
- [#2809] Fix: When 'ignore group selection' in grouped team view is enabled now all groups are selected
- [#211] Change: Dates prior to 1970 can now be saved properly (depends on TYPO3 4.2 now!)
- [#2801] Fix: Email address in the list view is not secured against spam
- [#2382] Fix: PHP error when loading oelib template helper due to camel-case filename