@@ -1,4 +1,5 @@
 version 0.9.1 - currently working on
+- [BUGFIX] Detailview shows non-localized data
 - [TASK] Adapting copyright lines to current reality
 - [BUGFIX] Location not shown in list view (Thanks Thomas Gemperle)
 
